--- a/index.html
+++ b/index.html
@@ -5,44 +5,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HeroBiz Bootstrap Template Demo</title>
+  <title>Test</title>
   <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="https://bootstrapmade.com/assets/css/demo-3.3.1.css">
+   
   </head>
 
 <body>
-  <header id="header">
-
-    <div class="logo">
-      <a href="https://bootstrapmade.com/" rel="home" title="Free Bootstrap Themes and Website Templates" title="Back to BootstrapMade Homepage"><img alt="BootstrapMade" src="https://bootstrapmade.com/assets/img/logo.png"><strong>Bootstrap<span>Made</span></strong></a>
-    </div>
-    <div class="preview-devices">
-      <ul>
-        <li class="preview-test preview-devices-active" id="preview-test-desktop" title="Desktop preview of the  HeroBiz template"><a href=""><svg class="icon icon-preview"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#preview"/></svg></a></li>
-        <li class="preview-test" id="preview-test-tablet" title="Tablet preview of the HeroBiz template"><a href=""><svg class="icon icon-tablet"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#tablet"/></svg></a></li>
-        <li class="preview-test" id="preview-test-mobile" title="Mobile preview of the HeroBiz template"><a href=""><svg class="icon icon-smartphone"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#smartphone"/></svg></a></li>
-      </ul>
-    </div>
-
-    <div class="navigate">
-      <ul>
-        <li><a href="https://bootstrapmade.com/demo/templates/HeroBiz/" target="_top" title="Hide the demo bar"><svg class="icon icon-external-link"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#external-link"/></svg></a></li>
-        <li><a href="https://bootstrapmade.com/herobiz-bootstrap-business-template/" title="HeroBiz Template Home Page"><svg class="icon icon-home"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#home"/></svg></a></li>
-        <li><a class="download" href="https://bootstrapmade.com/herobiz-bootstrap-business-template/#download" title="Download the HeroBiz Template"><svg class="icon icon-download"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#download"/></svg> <span>Free Download</span></a></li>
-                  <li><a href="https://bootstrapmade.com/demo/ZenBlog/" title="Previous Template: ZenBlog" target="_top"><svg class="icon icon-chevron-left"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#chevron-left"/></svg></a></li>
-        
-                <li><a href="https://bootstrapmade.com/demo/FlexStart/" title="Next Template: FlexStart" target="_top"><svg class="icon icon-chevron-right"  fill="currentColor"><use xlink:href="https://bootstrapmade.com/assets/img/icons-3.3.1.svg#chevron-right"/></svg></a></li>
-              </ul>
-    </div>
-
-  </header>
-
-  <div id="preview">
-    <iframe id="preview-frame" class="preview-desktop" src="https://bootstrapmade.com/demo/templates/HeroBiz/" frameborder="0"></iframe>
-  </div>
-
-      <script src="https://bootstrapmade.com/assets/js/demo-3.3.1.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P7JSYB1CSP"></script><script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-P7JSYB1CSP');</script>
-</body>
+  <h1>Test</h1></body>
 
 </html>
